@@ -67,11 +67,12 @@ import com.lilithsthrone.game.occupantManagement.slave.SlavePermissionSetting;
 import com.lilithsthrone.game.settings.ForcedFetishTendency;
 import com.lilithsthrone.game.settings.ForcedTFTendency;
 import com.lilithsthrone.game.sex.*;
+import com.lilithsthrone.game.sex.positions.AbstractSexPosition;
+import com.lilithsthrone.game.sex.positions.SexPosition;
 import com.lilithsthrone.game.sex.positions.slots.SexSlot;
 import com.lilithsthrone.game.sex.positions.slots.SexSlotManager;
 import com.lilithsthrone.game.sex.sexActions.baseActions.ToyVagina;
 import com.lilithsthrone.main.Main;
-import com.lilithsthrone.rendering.SVGImages;
 import com.lilithsthrone.utils.Units;
 import com.lilithsthrone.utils.Util;
 import com.lilithsthrone.utils.Util.Value;
@@ -283,6 +284,7 @@ public class UtilText {
             new Value<>("whisky", "whiskey"),
             new Value<>("queue", "line")
     );
+
     private static final String[] lastDescriptors = new String[2];
     private static final Map<String, CompiledScript> memo = new HashMap<>();
     private static final int memo_limit = 500;
@@ -341,7 +343,33 @@ public class UtilText {
                 "Formats the supplied number as money, using the tag as the html tag.") {
             @Override
             public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
-                return UtilText.formatAsMoney(arguments.split(", ")[0], arguments.split(", ")[1]);
+                String secondArgument = "span";
+                try {
+                    secondArgument = arguments.split(", ")[1];
+                } catch (Exception ex) {
+                    System.err.println("Formatting 'moneyFormat' missing second argument, so 'span' used instead.");
+                    ex.printStackTrace();
+                }
+                return UtilText.formatAsMoney(arguments.split(", ")[0], secondArgument);
+            }
+        });
+
+        COMMANDS_LIST.add(new ParserCommand(
+                Util.newArrayListOfValues("essenceFormat"),
+                true,
+                false,
+                "(amount, tag)",
+                "Formats the supplied number as essences, using the tag as the html tag.") {
+            @Override
+            public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
+                String secondArgument = "span";
+                try {
+                    secondArgument = arguments.split(", ")[1];
+                } catch (Exception ex) {
+                    System.err.println("Formatting 'moneyFormat' missing second argument, so 'span' used instead.");
+                    ex.printStackTrace();
+                }
+                return UtilText.formatAsEssences(arguments.split(", ")[0], secondArgument);
             }
         });
 
@@ -8495,7 +8523,7 @@ public class UtilText {
         return colour == null ? "" : "text-shadow: 0px 0px 4px " + colour.getShadesRgbaFormat(0.75f)[1] + ";";
     }
 
-    private static boolean isPlayer(String target, GameCharacter character) {
+    private static Boolean isPlayer(String target, GameCharacter character) {
         return target.startsWith("npc") && character.isPlayer();
     }
 
@@ -8548,7 +8576,7 @@ public class UtilText {
 
                 } else if (Main.game.isInSex() && Main.sex.getAllParticipants().contains(target)) {
                     if (Main.sex.isCharacterEngagedInOngoingAction(target)) {
-                        modifiedSentence = Util.addSexSounds(modifiedSentence, 6);
+                        modifiedSentence = Util.addSexSounds(modifiedSentence, 6, Main.sex.getSexPace(target) == SexPace.SUB_RESISTING);
                     }
 
                 }
@@ -8705,10 +8733,8 @@ public class UtilText {
     }
 
     public static String getPentagramSymbol() {
-        return "&#9737;"; // Java doesn't support unicode 6 ;_;   No pentagram for me... ;_;  "&#9956";
+        return "&#9956;";//"&#9737;"; // Java doesn't support unicode 6 ;_;   No pentagram for me... ;_;  "&#9956";
     }
-
-    // Money formatting:
 
     public static String getShieldSymbol() {
         return "&#9930;";
@@ -8739,18 +8765,37 @@ public class UtilText {
         return "<span style='text-shadow: 2px 2px " + colour.getShades()[0] + ";'>" + input + "</span>";
     }
 
+    // Money formatting:
+
     public static String formatAsEssencesUncoloured(int amount, String tag, boolean withOverlay) {
-        return "<div class='item-inline'>"
-                + SVGImages.SVG_IMAGE_PROVIDER.getEssenceUncoloured() + (withOverlay ? "<div class='overlay no-pointer' id='ESSENCE_ICON'></div>" : "")
-                + "</div>"
-                + " <" + tag + " style='color:" + PresetColour.TEXT_GREY.toWebHexString() + ";'>" + Units.number(amount) + "</" + tag + ">";
+        String disabledColour = PresetColour.TEXT_GREY.toWebHexString();
+        return
+//				"<div class='item-inline'>"
+//					+ SVGImages.SVG_IMAGE_PROVIDER.getEssenceUncoloured() + (withOverlay?"<div class='overlay no-pointer' id='ESSENCE_ICON'></div>":"")
+//				+"</div>"
+                "<b style='color:" + disabledColour + "; -webkit-text-stroke: 1px " + disabledColour + "; padding-right:2px;'>" + getPentagramSymbol() + "</b>"
+                        + "<" + tag + " style='color:" + disabledColour + ";'>" + Units.number(amount) + "</" + tag + ">";
+    }
+
+    public static String formatAsEssences(String essences, String tag) {
+        try {
+            int essenceInt = Integer.parseInt(UtilText.parse(essences));
+            return formatAsEssences(essenceInt, tag, false);
+        } catch (Exception ex) {
+        }
+        return formatAsMoney(essences, tag, PresetColour.TEXT);
     }
 
     public static String formatAsEssences(int amount, String tag, boolean withOverlay) {
-        return "<div class='item-inline'>"
-                + SVGImages.SVG_IMAGE_PROVIDER.getEssence() + (withOverlay ? "<div class='overlay no-pointer' id='ESSENCE_ICON'></div>" : "")
-                + "</div>"
-                + " <" + tag + " style='color:" + PresetColour.GENERIC_ARCANE.toWebHexString() + ";'>" + Units.number(amount) + "</" + tag + ">";
+        String arcaneColour = PresetColour.GENERIC_ARCANE.toWebHexString();
+        return
+//				"<div class='item-inline'>"
+//					+ SVGImages.SVG_IMAGE_PROVIDER.getEssence() + (withOverlay?"<div class='overlay no-pointer' id='ESSENCE_ICON'></div>":"")
+//				+"</div>"
+//				 "<b style='color:"+arcaneColour+"; text-shadow: "+PresetColour.BASE_PINK_LIGHT.toWebHexString()+" 0 0 16px;'>&#9956;</b>"
+
+                "<b style='color:" + arcaneColour + "; -webkit-text-stroke: 1px " + arcaneColour + "; padding-right:2px;'>" + getPentagramSymbol() + "</b>"
+                        + "<" + tag + " style='color:" + arcaneColour + ";'>" + Units.number(amount) + "</" + tag + ">";
     }
 
     public static String formatAsItemPrice(int money) {
@@ -8828,6 +8873,23 @@ public class UtilText {
      */
     public static String addDeterminer(String word) {
         return generateSingularDeterminer(word) + " " + word;
+    }
+
+    /**
+     * @return 'a' or 'an'
+     */
+    public static String generateSingularDeterminer(String word) {
+        if (word.isEmpty()) {
+            return "";
+        }
+        if ((isVowel(word.charAt(0)) || word.charAt(0) == 'x' || word.charAt(0) == 'X')
+                && !word.startsWith("Uni") && !word.startsWith("uni")
+                && !word.startsWith("Used") && !word.startsWith("used")) {
+            return "an";
+
+        } else {
+            return "a";
+        }
     }
 
     /**
@@ -9427,13 +9489,6 @@ public class UtilText {
         return input;
     }
 
-    /**
-     * @return 'a' or 'an'
-     */
-    public static String generateSingularDeterminer(String word) {
-        return "";
-    }
-
     private static String parseSyntaxNew(List<GameCharacter> specialNPCs, String target, String command, String arguments, ParseMode currentParseMode) {
         GameCharacter character;
 
@@ -9814,6 +9869,9 @@ public class UtilText {
         for (CupSize cupSize : CupSize.values()) {
             engine.put("CUP_SIZE_" + cupSize.toString(), cupSize);
         }
+        for (HairLength hairLength : HairLength.values()) {
+            engine.put("HAIR_LENGTH_" + hairLength.toString(), hairLength);
+        }
         for (FootStructure footStructure : FootStructure.values()) {
             engine.put("FOOT_STRUCTURE_" + footStructure.toString(), footStructure);
         }
@@ -10047,8 +10105,14 @@ public class UtilText {
         for (OrgasmCumTarget oct : OrgasmCumTarget.values()) {
             engine.put("OCT_" + oct.toString(), oct);
         }
+        for (Entry<String, AbstractSexPosition> position : SexPosition.idToSexPositionMap.entrySet()) {
+            engine.put("SEX_POSITION_" + position.getKey(), position.getValue());
+        }
         for (Entry<String, SexSlot> slot : SexSlotManager.getIdToSexSlotMap().entrySet()) {
             engine.put("SEX_SLOT_" + slot.getKey(), slot.getValue());
+        }
+        for (LubricationType lube : LubricationType.values()) {
+            engine.put("LUBRICATION_" + lube.toString(), lube);
         }
 
 
@@ -10557,17 +10621,28 @@ public class UtilText {
             @Override
             public String parse(List<GameCharacter> specialNPCs, String command, String arguments, String target, GameCharacter character) {
                 String name;
-                if ((arguments != null && Boolean.valueOf(arguments))) {
-                    name = getBodyPartFromType(bodyPart, character).getNamePlural(character);
+                if (Boolean.parseBoolean(arguments)) {
+                    name = Optional.ofNullable(getBodyPartFromType(bodyPart, character))
+                            .map(bodyPartInterface -> bodyPartInterface.getNamePlural(character))
+                            .orElse(null);
                 } else {
-                    name = getBodyPartFromType(bodyPart, character).getName(character);
+                    name = Optional.ofNullable(getBodyPartFromType(bodyPart, character))
+                            .map(bodyPartInterface -> bodyPartInterface.getName(character))
+                            .orElse(null);
                 }
+
+                String descriptor = applyDescriptor(Optional.ofNullable(getBodyPartFromType(bodyPart, character))
+                        .map(bodyPartInterface -> bodyPartInterface.getDescriptor(character))
+                        .orElse(null), name);
+
                 if (parseAddPronoun) {
                     parseAddPronoun = false;
-                    return applyDeterminer(getBodyPartFromType(bodyPart, character).getDeterminer(character), applyDescriptor(getBodyPartFromType(bodyPart, character).getDescriptor(character), name));
+                    return applyDeterminer(Optional.ofNullable(getBodyPartFromType(bodyPart, character))
+                            .map(bodyPartInterface -> bodyPartInterface.getDeterminer(character))
+                            .orElse(null), descriptor);
 
                 } else {
-                    return applyDescriptor(getBodyPartFromType(bodyPart, character).getDescriptor(character), name);
+                    return descriptor;
                 }
             }
         });
@@ -10669,7 +10744,7 @@ public class UtilText {
         if (descriptor == null)
             return name;
 
-        return (descriptor.length() > 0 ? descriptor + " " : "") + name;
+        return (descriptor.isEmpty() ? "" : descriptor + " ") + name;
     }
 
     /**
@@ -10680,9 +10755,7 @@ public class UtilText {
             return input;
         }
 
-        return descriptor.length() > 0
-                ? descriptor + " "
-                : UtilText.generateSingularDeterminer(input) + input;
+        return descriptor.isEmpty() ? UtilText.generateSingularDeterminer(input) + input : descriptor + " ";
     }
 
     private static String getSubspeciesName(AbstractSubspecies subspecies, GameCharacter character) {
@@ -10754,7 +10827,7 @@ public class UtilText {
         }
 
         if (elements.size() == 1) {
-            return elements.get(0);
+            return elements.getFirst();
         }
 
         StringBuilder sb = new StringBuilder();
